COM-756 - fix auxiliary agenda on mobile

--- a/src/css/planning.styl
+++ b/src/css/planning.styl
@@ -166,7 +166,7 @@
     font-size: 1.3em
   &-select
     @media screen and (max-width: 767px)
-      width: 90%
+      width: 80%
   .q-field__control
     font-size: 1.3rem
   .q-select
